# Canopy

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gdbinit  .gdbinit-gdbserver  .gdbinit-gdbserver-skip-stl  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CMakeUserPresets.json.example  README.md  llms-full.txt  llms.txt  notes.txt  todo.md
benchmarking/fullstack/: CMakeLists.txt  benchmark.cpp
benchmarking/fullstack/src/: benchmark.cpp  benchmark_common.cpp  benchmark_common.h  benchmark_data_processor.h  benchmark_io_uring.cpp  benchmark_ipc.cpp  benchmark_libcoro_dynamic_library.cpp  benchmark_local.cpp  benchmark_spsc.cpp  benchmark_tcp.cpp  canopy_dll_init.cpp  canopy_libcoro_dll_init.cpp  canopy_libcoro_spsc_dll_init.cpp  ipc_child_process_main.cpp  rpc_log.cpp
benchmarking/serialisation/: CMakeLists.txt  benchmark.cpp
benchmarking/streaming/: CMakeLists.txt  benchmark.cpp
c++/: CMakeLists.txt
c++/benchmarking/: CMakeLists.txt
c++/benchmarking/fullstack/: CMakeLists.txt  benchmark_sgx_coroutine_enclave.config.debug.xml  benchmark_sgx_coroutine_enclave.config.prerelease.xml  benchmark_sgx_coroutine_enclave.config.release.xml
c++/benchmarking/serialisation/: CMakeLists.txt  benchmark.cpp
c++/benchmarking/streaming/: CMakeLists.txt  benchmark.cpp  benchmark_common.cpp  benchmark_common.h  benchmark_tls_fixture.h  stream_io_uring.cpp  stream_sgx_io_uring.cpp  stream_spsc.cpp  stream_tcp.cpp  stream_tcp_blocking.cpp  stream_tcp_coroutine.cpp  stream_tcp_wrapped.cpp  stream_tls_spsc.cpp  stream_tls_websocket_spsc.cpp  stream_websocket_spsc.cpp  websocket_client_stream.h
c++/connection_factory/: CMakeLists.txt  config_topology_schema_design_change.md  config_topology_schema_proposal.md  dependency_injection_plan.md  marshaller_schema_api_design.md  marshaller_schema_implementation_plan.md
c++/connection_factory/cmake/: CanopyConnectionConfigSchema.cmake
c++/connection_factory/src/: application_config.cpp  connection_factory.cpp  connection_factory_components.h  handles.cpp  options.cpp  service.cpp
c++/connection_factory/tools/: config_schema_compose.cpp
c++/demos/: CMakeLists.txt  example_launch.json
c++/demos/comprehensive/: CMakeLists.txt  README.md
c++/demos/config_demo/: CMakeLists.txt  README.md
c++/demos/llm_mcp/: CMakeLists.txt
c++/demos/rpc_objects/: CMakeLists.txt
c++/demos/stream_composition/: CMakeLists.txt
c++/demos/websocket/: CMakeLists.txt  README.md
c++/rpc/: CMakeLists.txt
c++/rpc/src/: address_utils.cpp  casting_interface.cpp  error_codes.cpp  object_proxy.cpp  pass_through.cpp  rpc_types.cpp  service.cpp  service_proxy.cpp  stub.cpp  thread_local_logger.cpp  transport.cpp  version.cpp
c++/security/attestation/: CMakeLists.txt
c++/streaming/: CMakeLists.txt
c++/streaming/attestation/: CMakeLists.txt
c++/streaming/compression/: CMakeLists.txt
c++/streaming/core/: CMakeLists.txt
c++/streaming/io_uring/: CMakeLists.txt  todo.md
c++/streaming/io_uring_new/: CMakeLists.txt
c++/streaming/io_uring_tcp/: CMakeLists.txt
c++/streaming/layer_factory/: CMakeLists.txt
c++/streaming/mbedtls/: CMakeLists.txt
c++/streaming/openssl_tls/: CMakeLists.txt
c++/streaming/spsc_buffered_stream/: CMakeLists.txt  todo.md
c++/streaming/spsc_queue/: CMakeLists.txt
c++/streaming/spsc_wrapping/: CMakeLists.txt  todo.md
c++/streaming/tcp/: CMakeLists.txt
c++/streaming/tcp_blocking/: CMakeLists.txt
c++/streaming/tcp_coroutine/: CMakeLists.txt
c++/streaming/tests/: io_uring_stream_test.cpp  streaming_regression_test.cpp
c++/streaming/tls/: CMakeLists.txt
c++/streaming/websocket/: CMakeLists.txt
c++/subcomponents/dns_resolver/: CMakeLists.txt
c++/subcomponents/file_system/: CMakeLists.txt
c++/subcomponents/http_client/: CMakeLists.txt
c++/subcomponents/http_server/: CMakeLists.txt
c++/subcomponents/http_utils/: CMakeLists.txt
c++/subcomponents/io_uring/: CMakeLists.txt
c++/subcomponents/io_uring_config/: CMakeLists.txt
c++/subcomponents/json/: CMakeLists.txt
c++/subcomponents/modules/: CMakeLists.txt
c++/subcomponents/network_config/: CMakeLists.txt
c++/submodules/: CMakeLists.txt
c++/telemetry/: CMakeLists.txt
c++/tests/: CMakeLists.txt  lsan.supp
c++/transports/: CMakeLists.txt  Transports.md
demos/comprehensive/: CMakeLists.txt  README.md
demos/stream_composition/: CMakeLists.txt
integration_tests/fuzz_test/: CMakeLists.txt  fuzz_gtest_wrapper.cpp  fuzz_test_main.cpp  replay_failure.sh  untrusted_web_fuzz_gtest.cpp
rpc/: CMakeLists.txt
rpc/interfaces/: CMakeLists.txt
rpc/src/: address_utils.cpp  casting_interface.cpp  error_codes.cpp  object_proxy.cpp  pass_through.cpp  rpc_types.cpp  service.cpp  service_proxy.cpp  stub.cpp  thread_local_logger.cpp  transport.cpp
rust/: AGENTS.md  COMPLETED.md  Cargo.toml  ORIGINAL_TRANSLATION_INSTRUCTIONS.md  PROGRESS.md  PYTHON_TRANSLATION_INSTRUCTIONS.md  README.md  TRANSLATION_RETROSPECTIVE.md
rust/rpc/: Cargo.toml  README.md
rust/tests/: README.md
rust/transports/: README.md
streaming/: CMakeLists.txt
streaming/core/: CMakeLists.txt
streaming/io_uring/: CMakeLists.txt
streaming/io_uring_tcp/: CMakeLists.txt
streaming/spsc_queue/: CMakeLists.txt
streaming/spsc_wrapping/: CMakeLists.txt
streaming/src/: io_uring_tcp_stream.cpp  spsc_queue_stream.cpp  spsc_wrapping_stream.cpp  stream.cpp  tcp_stream.cpp  tls_stream.cpp  ws_stream.cpp
streaming/tcp/: CMakeLists.txt
streaming/tests/: io_uring_stream_test.cpp  streaming_regression_test.cpp
streaming/tls/: CMakeLists.txt
streaming/websocket/: CMakeLists.txt
subcomponents/http_server/: CMakeLists.txt
subcomponents/network_config/: CMakeLists.txt
subcomponents/streaming/: CMakeLists.txt
submodules/: CMakeLists.txt
telemetry/: CMakeLists.txt
telemetry/src/: animation_telemetry_service.cpp  console_telemetry_service.cpp  enclave_telemetry_service.cpp  multiplexing_telemetry_service.cpp  sequence_diagram_telemetry_service.cpp  telemetry_handler.cpp  telemetry_service_factory.cpp
tests/common/: CMakeLists.txt
(+1613 files in other folders)
